<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="vertical">

        <TextView
            android:id="@+id/txt_product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="5dp"
            android:text="@string/app_product_name"
            android:textColorHint="@color/black"
            android:textSize="18sp"
            android:layout_marginLeft="10dp"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/txt_product_qty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="5dp"
            android:text="@string/app_product_quantity"
            android:textColorHint="@color/black"
            android:textSize="18sp"
            android:layout_marginLeft="10dp"
            android:textColor="@android:color/black" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_unit_price"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="5dp"
            android:text="@string/app_product_unitprice"
            android:textColorHint="@color/black"
            android:textSize="18sp"
            android:layout_marginLeft="10dp"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/txt_product_tax"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/app_product_tax"
            android:textColorHint="@color/black"
            android:textAlignment="textEnd"
            android:gravity="end"
            android:textSize="18sp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="20dp"
            android:textColor="@android:color/black" />
    </LinearLayout>

    <TextView
        android:id="@+id/txt_total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/app_total"
        android:textColorHint="@color/black"
        android:textSize="18sp"
        android:layout_marginLeft="10dp"
        android:textColor="@android:color/black" />


</LinearLayout>