<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/backgd"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/holo_blue_dark"
        tools:ignore="MissingConstraints"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/backarrowaddprodtlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back_24"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp" />

        <TextView
            android:id="@+id/headprodlist"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_product_list_title"
            android:textColor="@color/black"
            android:layout_gravity="center" />

    </LinearLayout>

    <TextView
        android:id="@+id/product_orderno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:text="@string/app_salesorder_no"
        android:textSize="18sp"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/product_customername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:text="@string/app_sales_customer_name"
        android:textSize="18sp"
        android:textColor="@android:color/black"/>

    <ListView
        android:id="@+id/list_product"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:divider="@color/black"
        android:dividerHeight="2dp"
        android:footerDividersEnabled="true" />


</LinearLayout>