<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/white"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp"
        style="@style/CardView.Light">

        <TextView
            android:id="@+id/text_titlepopup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:gravity="center"
            android:text="@string/app_status_type"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:textSize="18sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/radiogroup_opport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radioBtn_quailfy"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:text="@string/app_opp_qualified"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="18sp"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/radioBtn_won"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/app_opp_won"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/radioBtn_closed"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/app_opp_closed"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="18sp" />
            </RadioGroup>

            <LinearLayout
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <Button
                android:id="@+id/btn_close"
                android:layout_width="wrap_content"
                android:layout_margin="10dp"
                android:layout_height="wrap_content"
                android:text="CLose"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn_chnage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="Change"
                android:textSize="18sp" />
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>