<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/green_light_backgd"
    tools:context=".OpportunityInsertion">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!--    xmlns:android="http://schemas.android.com/apk/res/android"-->
        <!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
        <!--    xmlns:tools="http://schemas.android.com/tools"-->

        <!--    android:background="@drawable/bb"-->
        <!--    tools:context=".LoginActivity">-->

        <LinearLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/holo_blue_light"
            tools:ignore="MissingConstraints"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/backarrowaddopport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_back_24"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp" />

            <TextView
                android:id="@+id/headopprt"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/app_opportunity_title"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_gravity="center" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="10dp"
                android:hint="@string/app_opportunity"
                android:paddingStart="12dp"
                android:textColorHint="@color/black"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
                android:textSize="18sp"
                android:id="@+id/editopp"
                android:paddingLeft="12dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="10dp"
                android:hint="@string/app_expected_revenue"
                android:paddingStart="12dp"
                android:textColorHint="@color/black"
                android:digits="0123456789."
                android:textSize="18sp"
                android:id="@+id/editrevenue"
                android:paddingLeft="12dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="10dp"
                android:hint="@string/app_probability"
                android:paddingStart="12dp"
                android:textColorHint="@color/black"
                android:digits="0123456789.% "
                android:textSize="18sp"
                android:id="@+id/editprobability"
                android:paddingLeft="12dp" />

            <Spinner
                android:id="@+id/customer"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:autofillHints="Customer"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                style="@style/Widget.AppCompat.Spinner.Underlined"/>

            <Spinner
                android:id="@+id/product"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:autofillHints="Product"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                style="@style/Widget.AppCompat.Spinner.Underlined"/>

            <Spinner
                android:id="@+id/activity"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:autofillHints="Activity Type"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                style="@style/Widget.AppCompat.Spinner.Underlined"/>

            <EditText
                android:singleLine="true"
                android:id="@+id/editdate"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="10dp"
                android:focusable="false"
                android:hint="@string/app_date"
                android:paddingStart="12dp"
                android:textColorHint="@color/black"
                android:textSize="18sp"
                android:drawableRight="@drawable/ic_calendar_today_24"
                android:inputType="date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="12dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="10dp"
                android:hint="@string/app_email"
                android:paddingStart="12dp"
                android:textColorHint="@color/black"
                android:textSize="18sp"
                android:id="@+id/editemail"
                android:paddingLeft="12dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="10dp"
                android:hint="@string/app_phone"
                android:paddingStart="12dp"
                android:textColorHint="@color/black"
                android:textSize="18sp"
                android:id="@+id/editphn"
                android:paddingLeft="12dp" />

            <Spinner
                android:id="@+id/empname"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:autofillHints="Employee Name"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                style="@style/Widget.AppCompat.Spinner.Underlined"/>

            <Spinner
                android:id="@+id/salesteam"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:autofillHints="Sales Team"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                style="@style/Widget.AppCompat.Spinner.Underlined"/>

            <Spinner
                android:id="@+id/tags"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:autofillHints="Tags"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                style="@style/Widget.AppCompat.Spinner.Underlined"/>

            <RatingBar
                android:id="@+id/rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:background="@android:color/transparent"
                style="?attr/ratingBarStyle"/>

            <EditText
                android:id="@+id/note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="10dp"
                android:hint="@string/app_note"
                android:paddingStart="12dp"
                android:textColorHint="@color/black"
                android:textSize="18sp"
                android:fontFamily="sans-serif-condensed"
                android:minLines="2"
                android:maxLines="3"
                android:scrollbars="vertical"
                android:inputType="textMultiLine"
                android:paddingLeft="12dp" />
        </LinearLayout>

        <Button
            android:id="@+id/btnCancelOpp"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:drawablePadding="10dp"
            android:text="@string/app_cancel_button"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:textSize="18sp"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnSaveOpp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.32999998"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/btnSaveOpp"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:drawablePadding="10dp"
            android:text="@string/app_save_button"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="@+id/btnCancelOpp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnCancelOpp"
            app:layout_constraintTop_toTopOf="@+id/btnCancelOpp"
            tools:ignore="RtlSymmetry" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>