<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/holo_blue_dark"
        tools:ignore="MissingConstraints"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/headlistopport"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_opportunity_list_title"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_gravity="center" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/opport_search"
            android:layout_width="0dp"
            android:layout_weight="9"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="32dp"
            android:background="@color/design_default_color_secondary_variant"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/app_search"
            android:textSize="18sp"
            android:inputType="text"
            android:textColorHint="@color/black"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="10dp" />

        <ImageView
            android:id="@+id/imageoppfilt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:paddingTop="30dp"
            android:layout_weight="0.5"
            android:src="@drawable/ic_filter_list_24" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearfilter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:visibility="gone"
        android:orientation="vertical">
    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <EditText
            android:singleLine="true"
            android:id="@+id/editstartdate"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="5dp"
            android:focusable="false"
            android:hint="@string/app_startdate"
            android:textColorHint="@color/black"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:drawableRight="@drawable/ic_calendar_today_24"
            android:inputType="date"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content" />


        <EditText
            android:singleLine="true"
            android:id="@+id/editenddate"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:focusable="false"
            android:hint="@string/app_enddate"
            android:textColorHint="@color/black"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:drawableRight="@drawable/ic_calendar_today_24"
            android:inputType="date"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/linear1">

        <Spinner
            android:id="@+id/status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Status"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            style="@style/Widget.AppCompat.Spinner.Underlined"/>

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:drawablePadding="10dp"
            android:text="Apply"
            android:textAllCaps="false"
            android:layout_gravity="center"/>
        </LinearLayout>

    </LinearLayout>


    <ListView
        android:id="@+id/opp_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearfilter"
        android:divider="@color/black"
        android:dividerHeight="2dp"
        android:footerDividersEnabled="true"/>


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floating_action_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_margin="16dp"
            android:src="@drawable/ic_add_24"/>

</RelativeLayout>